--- a/ps4/index.html
+++ b/ps4/index.html
@@ -3,7 +3,7 @@
 <html manifest="cache.manifest">
 <head>
 <meta charset="UTF-8" />
-<link rel="shortcut icon" href="img/favicon.png" />
+<link rel="shortcut icon" href="imagen/favicon.png" />
 <title>Jailbreak PS4 9.00</title>
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="css/simple-notify.min.css" />
 <style> 
     html, body{
-      background: url('img/bg1.png');
+      background: url('imagen/bg1.png');
       background-attachment: fixed;
       margin:auto;
       font-size:20px;
@@ -55,42 +55,42 @@
 <hr style="width: 50%"><h1 style="color:#00FF12;" >PAYLOADS</h1><hr style="width: 50%">
 
 <a href="goldhen2.3b2.html" >
-    <button class="btn btn-main" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='GOLD - HEN V2.3B2 Para FW 9.00'";   type="button"><img class="icone" src="img/HenEnable.png" /><br> GOLD HEN V2.3B2 </button></a>
+    <button class="btn btn-main" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='GOLD - HEN V2.3B2 Para FW 9.00'";   type="button"><img class="icone" src="imagen/HenEnable.png" /><br> GOLD HEN V2.3B2 </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Vuelca tus juegos (se requiere una unidad USB exFAT)'"; onclick="load_AppDumper()"><button href="" class="btn" ><img class="icone" src="img/dumper.png" /><br> Dumper de juegos </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Vuelca tus juegos (se requiere una unidad USB exFAT)'"; onclick="load_AppDumper()"><button href="" class="btn" ><img class="icone" src="imagen/dumper.png" /><br> Dumper de juegos </button></a>
 
 <a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Accede a tu consola vía FTP'"; onclick="load_FTP()">
   <button class="btn" href=""> <img class="icone" src="img/ftp.png" /><br> FTP </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Mover juegos instalados en HD interno a externo en EXFAT'"; onclick="load_App2USB()"><button class="btn" href="" ><img class="icone" src="img/app2usb.png" /><br> App-To-Usb </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Mover juegos instalados en HD interno a externo en EXFAT'"; onclick="load_App2USB()"><button class="btn" href="" ><img class="icone" src="imagen/app2usb.png" /><br> App-To-Usb </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Habilita algunas funciones especiales en la pestaña Juegos'";  onclick="load_TODEX()"><button class="btn" href=""><img class="icone" src="img/todex.png" /><br> To -  Dex </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Habilita algunas funciones especiales en la pestaña Juegos'";  onclick="load_TODEX()"><button class="btn" href=""><img class="icone" src="imagen/todex.png" /><br> To -  Dex </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Deshabilitar actualizaciones del sistema'"; onclick="load_DisableUpdates()"><button class="btn" href="" ><img class="icone" src="img/disableupdate.png" /><br> Deshabilitar Updates </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Deshabilitar actualizaciones del sistema'"; onclick="load_DisableUpdates()"><button class="btn" href="" ><img class="icone" src="imagen/disableupdate.png" /><br> Deshabilitar Updates </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Habilitar actualizaciones del sistema'"; onclick="load_EnableUpdates()"><button href="" class="btn" ><img class="icone" src="img/enableupdate.png" /><br> Habilitar Updates </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Habilitar actualizaciones del sistema'"; onclick="load_EnableUpdates()"><button href="" class="btn" ><img class="icone" src="imagen/enableupdate.png" /><br> Habilitar Updates </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Habilita algunas funciones especiales como enviar trucos'"; onclick="load_webrte()"><button href="" class="btn" ><img class="icone" src="img/rte.png" /><br> WebRTE </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Habilita algunas funciones especiales como enviar trucos'"; onclick="load_webrte()"><button href="" class="btn" ><img class="icone" src="imagen/rte.png" /><br> WebRTE </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='C. de seguridad de la base de datos de la consola en una unidad USB'"; onclick="load_BackupDB()"><button href="" class="btn" ><img class="icone" src="img/backup.png" /><br> Backup DB </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='C. de seguridad de la base de datos de la consola en una unidad USB'"; onclick="load_BackupDB()"><button href="" class="btn" ><img class="icone" src="imagen/backup.png" /><br> Backup DB </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Restaurar c. de seguridad de la base de datos desde una unidad USB'"; onclick="load_RestoreDB()"><button href="" class="btn" ><img class="icone" src="img/restore.png" /><br> Restaurar DB </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Restaurar c. de seguridad de la base de datos desde una unidad USB'"; onclick="load_RestoreDB()"><button href="" class="btn" ><img class="icone" src="imagen/restore.png" /><br> Restaurar DB </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Habilitar el historial del navegador'"; onclick="load_EnableBrowser()"><button class="btn" href="" ><img class="icone" src="img/enableupdate.png" /><br> Habilitar Browser </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Habilitar el historial del navegador'"; onclick="load_EnableBrowser()"><button class="btn" href="" ><img class="icone" src="imagen/enableupdate.png" /><br> Habilitar Browser </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Desactivar el historial del navegador'"; onclick="load_HistoryBlocker()"><button class="btn" href=""><img class="icone" src="img/disableupdate.png" /><br> Bloquear Historial </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Desactivar el historial del navegador'"; onclick="load_HistoryBlocker()"><button class="btn" href=""><img class="icone" src="imagen/disableupdate.png" /><br> Bloquear Historial </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Habilite algunas funciones en la pestaña Opciones de juegos'"; onclick="load_ps4debug()"><button class="btn" href="" ><img class="icone" src="img/ps4debug.png" /><br> PS4 Debug </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Habilite algunas funciones en la pestaña Opciones de juegos'"; onclick="load_ps4debug()"><button class="btn" href="" ><img class="icone" src="imagen/ps4debug.png" /><br> PS4 Debug </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Salir del Modo IDU (Opción para Desarrolladores...) '"; onclick="load_ExitIDU()"><button class="btn" href="" ><img class="icone" src="img/history.png" /><br> Exit IDU </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Salir del Modo IDU (Opción para Desarrolladores...) '"; onclick="load_ExitIDU()"><button class="btn" href="" ><img class="icone" src="imagen/history.png" /><br> Exit IDU </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Deshabilitar ASLR (aleatorización del diseño del espacio de direcciones)'"; onclick="load_DisableASLR()"><button class="btn" href="" ><img class="icone" src="img/disableupdate.png" /><br> Deshabilitar ASLR </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Deshabilitar ASLR (aleatorización del diseño del espacio de direcciones)'"; onclick="load_DisableASLR()"><button class="btn" href="" ><img class="icone" src="imagen/disableupdate.png" /><br> Deshabilitar ASLR </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Volcado del kernel de la consola a una unidad USB'"; onclick="load_KernelDumper()"><button href="" class="btn" > <img class="icone" src="img/history.png" /><br> Kernel Dumper </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Volcado del kernel de la consola a una unidad USB'"; onclick="load_KernelDumper()"><button href="" class="btn" > <img class="icone" src="imagen/history.png" /><br> Kernel Dumper </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Cambiar la hora del reloj del núcleo de la consola'"; onclick="load_Kernelclock()"><button href="" class="btn" ><img class="icone" src="img/history.png" /><br> Kernel Clock </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Cambiar la hora del reloj del núcleo de la consola'"; onclick="load_Kernelclock()"><button href="" class="btn" ><img class="icone" src="imagen/history.png" /><br> Kernel Clock </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Renombrar RIF 'falsos' a RIF 'oficiales''"; onclick="load_RIFRenamer()"><button href="" class="btn" ><img class="icone" src="img/keydumper.png" /><br> RIF Renaner </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Renombrar RIF 'falsos' a RIF 'oficiales''"; onclick="load_RIFRenamer()"><button href="" class="btn" ><img class="icone" src="imagen/keydumper.png" /><br> RIF Renaner </button></a>
 
 <a href="linux.html" >
     <button class="btn btn-main" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Cargas de linux'";   type="button"><img class="icone" src="img/linux.png" /><br> Linux </button></a>
