--- a/ps4/index.html
+++ b/ps4/index.html
@@ -60,7 +60,7 @@
 <a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Vuelca tus juegos (se requiere una unidad USB exFAT)'"; onclick="load_AppDumper()"><button href="" class="btn" ><img class="icone" src="imagen/dumper.png" /><br> Dumper de juegos </button></a>
 
 <a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Accede a tu consola vía FTP'"; onclick="load_FTP()">
-  <button class="btn" href=""> <img class="icone" src="img/ftp.png" /><br> FTP </button></a>
+  <button class="btn" href=""> <img class="icone" src="imagen/ftp.png" /><br> FTP </button></a>
 
 <a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Mover juegos instalados en HD interno a externo en EXFAT'"; onclick="load_App2USB()"><button class="btn" href="" ><img class="icone" src="imagen/app2usb.png" /><br> App-To-Usb </button></a>
 
@@ -93,7 +93,7 @@
 <a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Renombrar RIF 'falsos' a RIF 'oficiales''"; onclick="load_RIFRenamer()"><button href="" class="btn" ><img class="icone" src="imagen/keydumper.png" /><br> RIF Renaner </button></a>
 
 <a href="linux.html" >
-    <button class="btn btn-main" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Cargas de linux'";   type="button"><img class="icone" src="img/linux.png" /><br> Linux </button></a>
+    <button class="btn btn-main" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Cargas de linux'";   type="button"><img class="icone" src="imagen/linux.png" /><br> Linux </button></a>
 
 <br><br>
 
