--- a/ps4/linux.html
+++ b/ps4/linux.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html manifest="cache.manifest">
 <head>
 <meta charset="UTF-8" />
-<link rel="shortcut icon" href="img/favicon.png" />
+<link rel="shortcut icon" href="imagen/favicon.png" />
 <title>Linux PS4 9.00</title>
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -11,7 +10,7 @@
 <link rel="stylesheet" href="css/simple-notify.min.css" />
 <style> 
     html, body{
-      background: url('img/bg1.png');
+      background: url('imagen/bg1.png');
       background-attachment: fixed;
       margin:auto;
       font-size:20px;
@@ -40,22 +39,22 @@ document.cookie = 'kex=1';
 
 <div style="text-align:center">
   <a href="index.html" >
-    <button class="btn btn-main" onmouseout="progress.innerHTML='Jailbreak PS4 9.00'" onMouseOver="progress.innerHTML='Volver atras'";   type="button"><img class="icone" src="img/HenEnable.png" /><br> Menu principal </button></a>
+    <button class="btn btn-main" onmouseout="progress.innerHTML='Jailbreak PS4 9.00'" onMouseOver="progress.innerHTML='Volver atras'";   type="button"><img class="icone" src="imagen/HenEnable.png" /><br> Menu principal </button></a>
 
   </div>
 
 <br>
 <hr style="width: 50%"><h1 style="color:#00FF12;" >PAYLOADS</h1><hr style="width: 50%">
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Ejecuta linux en PS4'"; onclick="load_Linux1()"><button class="btn" href="" ><img class="icone" src="img/linux.png" /><br> Linux 1GB </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Ejecuta linux en PS4'"; onclick="load_Linux1()"><button class="btn" href="" ><img class="icone" src="imagen/linux.png" /><br> Linux 1GB </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Ejecuta linux en PS4'";  onclick="load_Linux2()"><button class="btn" href=""><img class="icone" src="img/linux.png" /><br> Linux 2GB </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Ejecuta linux en PS4'";  onclick="load_Linux2()"><button class="btn" href=""><img class="icone" src="imagen/linux.png" /><br> Linux 2GB </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Ejecuta linux en PS4'"; onclick="load_Linux3()"><button class="btn" href="" ><img class="icone" src="img/linux.png" /><br> Linux 3GB </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Ejecuta linux en PS4'"; onclick="load_Linux3()"><button class="btn" href="" ><img class="icone" src="imagen/linux.png" /><br> Linux 3GB </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Ejecuta linux en PS4'"; onclick="load_Linux4()"><button href="" class="btn" ><img class="icone" src="img/linux.png" /><br> Linux 4GB </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Ejecuta linux en PS4'"; onclick="load_Linux4()"><button href="" class="btn" ><img class="icone" src="imagen/linux.png" /><br> Linux 4GB </button></a>
 
-<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Ejecuta linux en PS4'"; onclick="load_Linux5()"><button href="" class="btn" ><img class="icone" src="img/linux.png" /><br> Linux 5GB </button></a>
+<a id="button-Payload" onmouseout="progress.innerHTML='Jailbreak 9.00'" onMouseOver="progress.innerHTML='Ejecuta linux en PS4'"; onclick="load_Linux5()"><button href="" class="btn" ><img class="icone" src="imagen/linux.png" /><br> Linux 5GB </button></a>
 
 <br><br>
 
